# internal/entity/contact_entity.go
@@ -1,14 +1,15 @@
 package entity
 
 type Contact struct {
-	ID        string    `gorm:"column:id;primaryKey"`
-	FirstName string    `gorm:"column:first_name"`
-	LastName  string    `gorm:"column:last_name"`
-	Email     string    `gorm:"column:email"`
-	Phone     string    `gorm:"column:phone"`
-	UserId    string    `gorm:"column:user_id"`
-	CreatedAt int64     `gorm:"column:created_at;autoCreateTime:milli"`
-	UpdatedAt int64     `gorm:"column:updated_at;autoCreateTime:milli;autoUpdateTime:milli"`
+	ID        string `gorm:"column:id;primaryKey"`
+	FirstName string `gorm:"column:first_name"`
+	LastName  string `gorm:"column:last_name"`
+	Email     string `gorm:"column:email"`
+	Phone     string `gorm:"column:phone"`
+	UserId    string `gorm:"column:user_id"`
+	CreatedAt int64  `gorm:"column:created_at;autoCreateTime:milli"`
+	UpdatedAt int64  `gorm:"column:updated_at;autoCreateTime:milli;autoUpdateTime:milli"`
+
 	User      User      `gorm:"foreignKey:user_id;references:id"`
 	Addresses []Address `gorm:"foreignKey:contact_id;references:id"`
 }
