# internal/entity/user_entity.go
@@ -2,13 +2,15 @@ package entity
 
 // User is a struct that represents a user entity
 type User struct {
-	ID        string    `gorm:"column:id;primaryKey"`
-	Password  string    `gorm:"column:password"`
-	Name      string    `gorm:"column:name"`
-	Token     string    `gorm:"column:token"`
-	CreatedAt int64     `gorm:"column:created_at;autoCreateTime:milli"`
-	UpdatedAt int64     `gorm:"column:updated_at;autoCreateTime:milli;autoUpdateTime:milli"`
-	Contacts  []Contact `gorm:"foreignKey:user_id;references:id"`
+	ID        string `gorm:"column:id;primaryKey"`
+	Password  string `gorm:"column:password"`
+	Name      string `gorm:"column:name"`
+	Token     string `gorm:"column:token"`
+	CreatedAt int64  `gorm:"column:created_at;autoCreateTime:milli"`
+	UpdatedAt int64  `gorm:"column:updated_at;autoCreateTime:milli;autoUpdateTime:milli"`
+
+	Contacts []Contact `gorm:"foreignKey:user_id;references:id"`
+	Todos    []Todo    `gorm:"foreignKey:user_id;references:id"`
 }
 
 func (u *User) TableName() string {
